# Rust-FullStack-WebApp

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
backend/: Cargo.toml  build.rs
backend/android/: .gitignore  build.gradle
backend/android/app/: build.gradle
backend/android/app/src/main/: AndroidManifest.xml
backend/android/app/src/main/java/backend/: Server.java
backend/android/app/src/main/java/engineer/sametarik/webapp/: MainActivity.java  WebClient.java
backend/android/app/src/main/res/values/: strings.xml
backend/assets/: index.html
backend/certs/: cert.pem  key.pem
backend/src/: lib.rs
backend/src/platform/: android.rs
backend/src/server/: api.rs  file.rs  mod.rs  tls.rs
common/: Cargo.toml  Config.toml
common/locales/: en.yml  en_US.yml  tr.yml  tr_TR.yml
common/src/: config.rs  lib.rs
common/src/l10n/: detect.rs  locales.rs  mod.rs
common/src/types/: error.rs  mod.rs  test_data.rs
common/src/types/book/: metadata.rs  mod.rs
common/src/types/book/content/: mod.rs  page.rs  section.rs
frontend/: Cargo.toml
frontend/css/: mobileui.min.css
frontend/js/: cordova.min.js  mobileui.min.js
frontend/src/: lib.rs  utils.rs
frontend/src/components/: head.rs  header.rs  left_menu.rs  loading.rs  mod.rs  right_menu.rs  tabbar.rs
frontend/src/routes/: mod.rs  not_found.rs  search.rs
frontend/src/routes/home/: mod.rs
frontend/src/services/: api.rs
