[workspace.package]
edition = "2021"
description = "My attempt of full-stack Rust web app."
readme = "README.md"
license-file = "LICENSE"
documentation = "docs.rs"
repository = "https://github.com/Samet195/webapp.git"
keywords = []
categories = []

[workspace]
default-members = ["backend"]
members = ["backend", "common", "frontend"]
resolver = "2"

[workspace.lints.rust]
# unused = "allow" # for development
warnings = "deny"
unsafe_code = "deny"

[workspace.dependencies]
# Shared
anyhow = "1.0.82"
js-sys = "0.3.69"
log = "0.4.21"
rust-embed = { version = "8.3.0", features = ["debug-embed"] }
rust-i18n = "3.0.1"
serde = { version = "1.0.198", features = ["derive"] }

common = { path = "common", package = "webapp-common" }

# Common
serde_yaml = "0.9.34+deprecated"
toml = "0.8.12"
# For Windows
winapi = "0.3.9"

# Frontend
gloo-net = "0.5.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

# Backend
actix-server = "2.3.0"
actix-web = "4.5.1"
async-trait = "0.1.80"
mime_guess = "2.0.4"
minify-js = "0.6.0"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rustls = "0.22.2"
rustls-pemfile = "2.1.2"
serde_json = "1.0.116"
surrealdb = { version = "1.4.2", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["fs"] }
url = "2.5.0"
url_open = "0.0.2"
web-view = "0.7.3"
# For Android
android_logger = "0.13.3"
jni = { version = "0.21.1", default-features = false }
jni-mangle = "0.1.2"

[profile.dev]
opt-level = 0
debug = false
rpath = false
lto = false
strip = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
debug-assertions = false
codegen-units = 16
panic = "abort"
incremental = true
overflow-checks = false

[profile.android]
inherits = "release"
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
debug-assertions = false
codegen-units = 16
panic = "abort"
incremental = true
overflow-checks = false

[profile.wasm]
inherits = "release"
opt-level = 3
debug = false
rpath = false
lto = true
strip = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = true
overflow-checks = false
