[package]
name = "webapp-common"
version = "0.1.0"
authors = ["Samet195"]
edition.workspace = true
readme.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
name = "common"
path = "src/lib.rs"

[package.metadata.i18n]
avaible-locales = ["en", "tr_TR"]

[dependencies]
rust-embed.workspace = true
rust-i18n.workspace = true
serde_yaml.workspace = true
serde.workspace = true
toml.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys.workspace = true

[target.'cfg(target_family = "windows")'.dependencies]
winapi.workspace = true
